name:                hardd
version:             0.1.0.0
license-file:        LICENSE
author:              Edward George
maintainer:          edwardgeorge@gmail.com

-- A copyright notice.
-- copyright:           

-- category:            
build-type:          Simple

-- extra-source-files:  
cabal-version:       >=1.10


library
  exposed-modules:     New,
                       Join
  
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       async,
                       async-pool,
                       cereal,
                       constraints,
                       containers,
                       distributed-process,
                       distributed-process-simplelocalnet,
                       free,
                       hashable,
                       mtl,
                       operational,
                       pipes,
                       reflection,
                       stm,
                       temporary,
                       profunctors,
                       semigroups
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:        -Wall
